# MarkDownPost

./: .gitignore  LICENSE  README.md  env_template.txt  open_powershell_here.reg  package-lock.json  package.json  pyproject.toml
src/: main.py
src/cli/: __init__.py  env.py  gr.py  logger_config.py  tg.py  tgh.py
src/config/: settings.py
src/core/: env_manager.py  telegram.py  telegraph.py
src/utils/: converting_md2html.py  extract_from_h1.py  html_for_telegram.py  md2telegraph.py  upload_img.py
